# SpliceCraft

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  V1_GATE.md  mkdocs.yml  pyproject.toml  pyrightconfig.json  release.py  release.sh  rotation_ranker_bench.md  splicecraft.py  splicecraft_biology.py  splicecraft_cli.py
.claude/skills/: verifier-splicecraft.md
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml
.github/workflows/: docs.yml  publish.yml  test.yml
conda-recipe/: meta.yaml
docs/: PLATFORMS.md  agent-api.md  architecture.md  cli.md  data-safety.md  features.md  getting-started.md  index.md  install.md  invariants.md  keybindings.md  subsystems.md
scripts/: check_dep_wheels.py  commercialsaas_inspect.py  perf_probe.py  perf_probe_render.py  perf_probe_synthesis.py  rotation_ranker_bench.py  rotation_ranker_bench_report.md
tests/: FFE 1 ENTRY UPD.dna  FFE 2 ENTRY A1.dna  FFE 3 ENTRY A2.dna  FFE 4 ENTRY O1.dna  FFE 5 ENTRY O2.dna  conftest.py  perf-baseline.json  test_add_feature.py  test_agent_api.py  test_alignment_overlay.py  test_blast.py  test_circular_math.py  test_cli_client.py  test_clone_handoff.py  test_codon.py  test_collections.py  test_commercialsaas_io.py  test_cross_platform.py  test_data_safety.py  test_dna_sanity.py  test_domesticator.py  test_entry_vectors_auto.py  test_experiment_projects.py  test_experiments.py  test_features_library.py  test_genbank_io.py  test_gibson.py  test_hmm_db_catalog.py  test_integration_realistic.py  test_intron_render.py  test_invariants_hypothesis.py  test_library_bulk_mark.py  test_master_delete.py  test_migrate_data.py  test_modal_boundaries.py  test_mutagenize.py  test_new_agent_endpoints.py  test_new_formats.py  test_new_plasmid.py  test_online_blast.py  (+25 more)
