[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name            = "splicecraft"
version         = "0.9.16"
description     = "Terminal-based circular plasmid map viewer, sequence editor, and Primer3/Golden Braid primer design workbench"
readme          = "README.md"
requires-python = ">=3.10"
license         = { file = "LICENSE" }
authors = [
    { name = "Binomica Labs" },
]
keywords = [
    "bioinformatics", "plasmid", "genbank", "molecular-biology",
    "tui", "terminal", "primer3", "golden-braid", "cloning",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Terminals",
]
dependencies = [
    # Pin floors track the versions the test suite is verified
    # against (bumped in v0.8.8). End-user `pipx install splicecraft`
    # pulls the matching minimum so behaviour matches what shipped.
    "textual>=8.2.6",
    "biopython>=1.87",
    "primer3-py>=2.3.0",
    "platformdirs>=4.9.6",
    # pyhmmer powers the BLAST modal's BLASTN (nhmmer), BLASTP (phmmer),
    # and HMMscan tiers — pure-Python bindings to HMMER 3 with no
    # external C-library install required (the wheels ship the HMMER
    # source compiled in). The pure-Python BLAST fallback also runs
    # without pyhmmer for very short queries.
    "pyhmmer>=0.12.1",
    # Experiments lab-notebook deps (added 2026-05-18 with the
    # Experiments toolbar). All three are pure-Python wheels with no
    # external system shell-outs:
    #   * Pillow — read attached image bytes, opportunistic clipboard
    #     grab via `ImageGrab.grabclipboard()` on Win/Mac (Linux/WSL
    #     falls back to the file picker).
    #   * pyspellchecker — bundled English wordlist, no network at
    #     runtime; powers the F7 / Spellcheck button's misspelling
    #     detection in the Compose pane.
    #   * rich-pixels — renders attached images as Unicode half-blocks
    #     in any terminal (no kitty/sixel/iTerm graphics protocol
    #     required), used in the Attachments grid preview.
    "Pillow>=10.0",
    "pyspellchecker>=0.8.0",
    "rich-pixels>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-xdist>=3.8.0",
    "hypothesis>=6.152.7",
    "build>=1.5.0",
    "twine>=6.2.0",
    # Linters / type-checkers / coverage — mirror what CI runs
    # so local + CI behaviour stays in step (see test.yml).
    "ruff>=0.15.0",
    # `pyright` is intentionally floor-pinned at 1.1.408 (when strict
    # mode first surfaced a regression we care about) but the dev /
    # CI install ALWAYS pulls latest via PYRIGHT_PYTHON_FORCE_VERSION
    # (set in test.yml + recommended for local). The pip-resolved
    # version is only the bootstrap; the launcher then downloads the
    # current latest into a managed cache and runs it.
    "pyright>=1.1.408",
    "coverage>=7.0",
]

[project.urls]
Homepage   = "https://github.com/Binomica-Labs/SpliceCraft"
Repository = "https://github.com/Binomica-Labs/SpliceCraft"
Issues     = "https://github.com/Binomica-Labs/SpliceCraft/issues"
Changelog  = "https://github.com/Binomica-Labs/SpliceCraft/blob/master/CHANGELOG.md"

[project.scripts]
splicecraft     = "splicecraft:main"
# Stdlib-only sidecar (~50 ms startup) for external AI agents driving
# the running GUI via the localhost agent-API. See `splicecraft --help`
# for `--agent-api` and the README's "Agent API" section.
splicecraft-cli = "splicecraft_cli:main"

[tool.hatch.build.targets.wheel]
# CHANGELOG.md is bundled so the in-app "What's New" modal works for
# every install path (pipx, pip, conda) — without it `_load_whats_new_body`
# falls back to the GitHub-link placeholder.
only-include = [
    "splicecraft.py",
    "splicecraft_cli.py",
    # First deliberate extraction from the single-file rule —
    # pure biology primitives (`_rc`, `_iupac_pattern`,
    # `_feat_len`, etc.) live here and are re-imported by
    # splicecraft.py. See its module docstring + the
    # CONTRIBUTING three-test rule for the extraction
    # criteria. Must ship in the wheel or `import splicecraft`
    # fails at the import-back step.
    "splicecraft_biology.py",
    "CHANGELOG.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "splicecraft.py",
    "splicecraft_biology.py",
    "splicecraft_cli.py",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
    "splicecraftLogo.png",
    "splicecraftScreenshot.png",
    "tests/**",
    "pyproject.toml",
]
# .dna (popular commercial plasmid editor binary) fixtures live in tests/ for local integration
# tests but are NOT redistributed through PyPI — they're real lab
# plasmids, and the pytest suite skips the related tests when absent.
exclude = [
    "tests/*.dna",
]

[tool.ruff]
# Ruff is the lightweight bug-finding / lint gate. The strict
# correctness gate is pyright (see `[tool.pyright]` below) + the full
# pytest suite. Ruff sits in front of both to catch the cheap stuff
# fast.
#
# We pick a TIGHT ruleset on purpose:
#   * F — all of pyflakes (real bugs: undefined names, unused vars,
#         f-string-without-placeholder, etc.)
#   * E9 — syntax errors only (the rest of E is style, and conflicts
#         with intentional codebase choices like mid-file lazy imports
#         and one-line `if x: do()` for tight conditionals).
#
# `B` (bugbear) and `UP` (pyupgrade) are deliberately NOT enabled
# today: bugbear flags several intentional patterns (synchronous
# closure capture, `zip()` without `strict=`) as smells. They're
# tracked as a follow-up sweep, after which they'll be enabled here.
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["F", "E9"]
# tests/ runs duck-typed against Textual / BioPython internals and
# uses fixtures whose names look unused to the linter; skip the
# noise. Production code is what ruff guards.
exclude = ["tests/**", ".hypothesis/**", "build/**", "dist/**"]

[tool.ruff.format]
# Hands off. Formatting the whole 61k-LoC file would produce a churn
# diff that destroys git blame for no behavioural gain. Re-enable
# once a dedicated formatting sweep is scheduled.
exclude = ["*"]

[tool.pyright]
# Pyright runs strict on the shipped application code only. Tests
# duck-type heavily on Textual's `App.push_screen()` return (which
# is typed as `Screen[object]`), assert non-None after explicit
# guards pyright can't narrow, and call BioPython APIs whose stubs
# don't model `Position | ExactPosition` precisely. The resulting
# noise drowns out genuine errors on the application surface, so
# the test tree is excluded from analysis. Real test breakage is
# caught by `pytest -n auto -q` which already runs against the
# same files.
include = ["splicecraft.py", "splicecraft_biology.py", "splicecraft_cli.py"]
exclude = [
    "tests/**",
    "build/**",
    "dist/**",
    "**/__pycache__/**",
    ".venv/**",
    "venv/**",
]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:Bio.*",
    "ignore::PendingDeprecationWarning:Bio.*",
]
# Custom test markers. `slow` is for test classes / functions that
# do heavy I/O (snapshot creation, BLAST DB build, large-plasmid
# render, full domestication workflow). Default test runs include
# them; a fast inner-loop CI job can pass `-m "not slow"` to skip
# them. Registering the marker here silences pytest's "unknown
# marker" warning.
markers = [
    "slow: heavy-I/O or long-running test (use `-m 'not slow'` to skip)",
]
